--- a/action.yml
+++ b/action.yml
@@ -25,4 +25,4 @@ outputs:
     description: 'The timestamp on the message that was posted into Slack when using bot token'
 runs:
   using: 'node12'
-  main: 'dist/index.js'
+  main: 'src/index.js'
